syntax = "proto3";

option java_package = "com.codelab.android.datastore";
option java_multiple_files = true;

message UserPreference {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  int32 phone_number = 4;
}
